--- a/Golf1/Base.lproj/Main.storyboard
+++ b/Golf1/Base.lproj/Main.storyboard
@@ -154,6 +154,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <state key="normal" title="Submit "/>
                                 <connections>
+                                    <action selector="infoSubmit:" destination="cbO-LM-5el" eventType="touchUpInside" id="Jer-fc-s2o"/>
                                     <segue destination="gVR-g9-r4n" kind="show" id="LCU-8h-vYS"/>
                                 </connections>
                             </button>
